# AIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml
collector/: README.md  pyproject.toml  requirements.txt  test_collector.py  test_git_remote_identity.py  test_rich_telemetry.py
collector/aiq_collector/: __init__.py  analyzer.py  cli.py  collect.py  harnesses.py  models.py  parser.py  rules.py  scoring.py
dashboard/: app.js  index.html  styles.css
docs/: collector-signal-inventory.md  cross-platform.md  rules-audit.md  v2-research-and-phases.md
infra/azure-container-apps/: README.md  main.tf  outputs.tf  variables.tf
scripts/: aiq-mothership.py
server/: Dockerfile  __init__.py  cost_engine.py  database.py  main.py  models.py  plan_catalog.py  recommendations.py  rules_meta.py  test_cost_engine.py  test_git_remote_project_identity.py  test_plan_spend_rollups.py  test_project_assignment.py  test_rules_policy.py  test_server.py
