[project]
name = "aiq-collector"
version = "0.1.0"
description = "AIQ edge collector — parse AI coding assistant logs and push efficiency metrics to the mothership"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "AIQ"}]
keywords = ["ai", "copilot", "claude", "efficiency", "analytics", "dashboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
aiq = "aiq_collector.cli:main"

[project.urls]
Homepage = "https://github.com/sanskarjaiswal2001/AIQ"
Repository = "https://github.com/sanskarjaiswal2001/AIQ"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
